--- a/index.ipynb
+++ b/index.ipynb
@@ -161,6 +161,7 @@
     }
    ],
    "source": [
+    "\n",
     "friends"
    ]
   },
@@ -499,27 +500,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[{'name': 'Friends',\n",
-       "  'genre': 'sitcom',\n",
-       "  'no_of_seasons': 10,\n",
-       "  'no_of_episodes': 236,\n",
-       "  'creators': ['David Crane', 'Marta Kauffman']},\n",
-       " {'name': 'Seinfeld',\n",
-       "  'creators': ['Larry David', 'Jerry Seinfeld'],\n",
-       "  'genre': 'sitcom',\n",
-       "  'no_of_seasons': 10,\n",
-       "  'no_of_episodes': 180}]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'friends' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-a1edc9fc7acc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtv_shows\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mfriends\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mseinfeld\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtv_shows\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'friends' is not defined"
+     ]
     }
    ],
    "source": [
@@ -540,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +546,7 @@
        " 'no_of_episodes': 180}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +681,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
